# tele2-stock-bot

./: Dockerfile  api_client.py  entrypoint.sh  main.py  pyproject.toml  trade.py
