[tool.poetry]
name = "tele2-market-bot"
version = "0.1.0"
description = ""
authors = ["Viacheslav Riazanov <riazanovslv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uplink = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
